[gd_scene load_steps=17 format=2]

[ext_resource path="res://Assets/Characters/chicken.png" type="Texture" id=1]
[ext_resource path="res://Escenas/Jugador.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sounds/1 chicken.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/Sounds/4 hit.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/Sounds/3 score.ogg" type="AudioStream" id=5]
[ext_resource path="res://Assets/Music/2 death.wav" type="AudioStream" id=6]
[ext_resource path="res://Assets/Sounds/2 frutilla.ogg" type="AudioStream" id=7]
[ext_resource path="res://Assets/Music/1 main.wav" type="AudioStream" id=8]

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 96, 44, 32, 20 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 16, 32, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 32, 16, 32, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 0, 48, 32, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 32, 48, 32, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 160, 48, 32, 16 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 9 ) ],
"loop": true,
"name": "die",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 0.8
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "run",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=8]
radius = 15.0

[node name="Jugador" type="Area2D"]
position = Vector2( 209, 256 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -7, -26 )
scale = Vector2( 2.5, 2.5 )
frames = SubResource( 7 )
animation = "idle"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -10, -21 )
shape = SubResource( 8 )

[node name="cacareo" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -7.5

[node name="CacareoTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="RunTimer" type="Timer" parent="."]

[node name="Hitsong" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="Scoresong" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="Losesong" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[node name="frutillasong" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )

[node name="Mainsong" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )

[connection signal="area_entered" from="." to="." method="_on_Jugador_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Jugador_body_entered"]
[connection signal="timeout" from="CacareoTimer" to="." method="_on_CacareoTimer_timeout"]
[connection signal="timeout" from="RunTimer" to="." method="_on_RunTimer_timeout"]
